# ros-beacon-publisher

./: CMakeLists.txt  README.md  package.xml
bash_scan/: ibeacon-scan.bash
src/: a.out  beacon_publisher.cpp  beacon_publisher_test1.cpp  scantest.cpp
